--- a/my personal/akshaj-personal/package.json
+++ b/my personal/akshaj-personal/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "cohere-ai": "^7.15.2",
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
